# rust-sdl2-webgl

./: .gitignore  README.md  compile_wasm.bat  compile_wasm_debug.bat  run_desktop.bat
rust-sdl2-webgl/: Cargo.toml
rust-sdl2-webgl/.cargo/: config.toml
rust-sdl2-webgl/src/: app.rs  gl_utils.rs  global_state.rs  input.rs  logger.rs  main.rs  render.rs  sdl2_context.rs  top_down_camera.rs  wasm_context.rs  webgl_context.rs
rust-sdl2-webgl/src/gl_utils/: gl_types.rs  mod.rs
rust-sdl2-webgl/src/gl_utils/gl_types/: gl_types_native.rs  gl_types_wasm.rs
rust-sdl2-webgl/src/logger/: logger_native.rs  logger_wasm.rs
rust-sdl2-webgl/src/render/: camera.rs  grid_render.rs  immediate_render.rs
